# synbio-schema

./: .cruft.json  .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  about.yaml  index.html  mkdocs.yml  notes.md  paper.md  project.Makefile  pyproject.toml  sitemap.xml
ArabadopsisSeeds/: index.html
BioSafetyLevelEnum/: index.html
BiologicalSamples/: index.html
CategoryEnum/: index.html
Database/: index.html
DescriptorEnum/: index.html
FundingSourceEnum/: index.html
IntellectualPropertyEnum/: index.html
Modification/: index.html
ModificationTypeEnum/: index.html
NamedThing/: index.html
Organism/: index.html
Part/: index.html
PartsComments/: index.html
PartsSequence/: index.html
Person/: index.html
PersonCollection/: index.html
PersonStatus/: index.html
Placeholder/: index.html
Plasmid/: index.html
SeqTypeEnum/: index.html
StatusEnum/: index.html
Strain/: index.html
SubcategorySizeEnum/: index.html
aa_change/: index.html
abbreviation/: index.html
about/: index.html
age_in_years/: index.html
associated_part/: index.html
bio_safety_level/: index.html
biosample_accessions/: index.html
birth_date/: index.html
category/: index.html
comment/: index.html
creator/: index.html
curated_enzyme_name/: index.html
curated_gene_symbols/: index.html
curated_protein_name/: index.html
curated_uniprot_accession/: index.html
date_added/: index.html
date_joined/: index.html
description/: index.html
descriptor/: index.html
el_name_long/: index.html
el_name_short/: index.html
element/: index.html
element_id/: index.html
element_name/: index.html
element_organism/: index.html
email/: index.html
entries/: index.html
exactMatch/: index.html
examples/: README.md  index.html
external_urls/: index.html
first_name/: index.html
funding_source/: index.html
generation_date/: index.html
genome_accessions/: index.html
genotype_phenotype/: index.html
go_term_ids/: index.html
go_term_labels/: index.html
has_parts/: index.html
host_organism/: index.html
id/: index.html
intellectual_property/: index.html
is_staff/: index.html
is_superuser/: index.html
keywords/: index.html
last_name/: index.html
license/: index.html
match_ec_numbers/: index.html
match_gene_symbols_etc/: index.html
match_names/: index.html
metamodel_version/: index.html
modification_genes/: index.html
modification_set/: index.html
modification_taxon/: index.html
modification_type/: index.html
modifications_genes/: index.html
name/: index.html
notes/: index.html
nt_sequence/: index.html
organism_basis/: index.html
organism_set/: index.html
other_accessions/: index.html
parent_parts/: index.html
part_ofs/: index.html
permissible_values/: index.html
person_set/: index.html
position/: index.html
primary_email/: index.html
principal_investigator/: index.html
references/: index.html
resources/: felix_dump.db  fpbase.json  fpbase.yaml  linting_log.tsv  person.json  seq2ids.fasta  seq2ids.tsv  seq2ids_v_fpbase.tsv  seq2ids_v_uniprot.tsv  synbio_database.db  synbio_database.json  synbio_database.ttl  synbio_database.yaml  synbio_schema.schema.json
sbsweb/: menu.json  package-lock.json  package.json
scientific_names/: index.html
search/: search_index.json
selection_markers/: index.html
seq_name/: index.html
seq_type/: index.html
sequence_set/: index.html
size_bp/: index.html
source_file/: index.html
source_file_date/: index.html
source_file_size/: index.html
special_name/: index.html
species_name/: index.html
species_ncbi_taxon_number/: index.html
sql/: calc_seq_lens.sql  indices.sql  (+2 more)
(+53 files in other folders)
