[tool.poetry]
name = "synbio_schema"
version = "0.1.0"
description = "A schema for synthetic biology, inspired by IARPA FELIX"
authors = ["Mark Andrew Miller <MAM@lbl.gov>"]
license = "MIT"
readme = "README.md"
include = ["README.md", "src/synbio_schema/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
db-to-sqlite = "^1.4"
linkml-runtime = "^1.3.0"
psycopg2 = "^2.9.3"
click-option-group = "^0.5.3"
biopython = "^1.79"
click-log = "^0.4.0"
pandas = "^1.5.0"
requests-cache = "^0.9.6"
bx-python = "^0.9.0"

[tool.poetry.dev-dependencies]
linkml = "^1.3.3"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"

[tool.poetry.group.dev.dependencies]
linkml = "^1.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]

## why would I ahve to do tis compared to other LikML cookiecutter projects?
## or make a src/synbio_schema/__init__.py
#packages = [
#    { include = "nmdc_schema" }
#]