[tool.poetry]
name = "synbio_schema"
version = "0.1.0"
description = "A schema for synthetic biology, inspired by IARPA FELIX"
authors = ["Mark Andrew Miller <MAM@lbl.gov>"]
license = "MIT"
readme = "README.md"
include = ["README.md", "src/synbio_schema/schema", "project"]

[tool.poetry.dependencies]
#bioregistry = "^0.5.136"
#curies = "^0.4.0"
#schema-automator = "*"
#linkml-runtime = "^1.3.0"
biopython = "^1.79"
bx-python = "^0.9.0"
click-log = "^0.4.0"
click-option-group = "^0.5.3"
db-to-sqlite = "^1.4"
gprof2dot = "^2022.7.29"
linkml = "^1.3.7"
pandas = "^1.5.0"
psycopg2 = "^2.9.3"
python = "^3.9"
requests-cache = "^0.9.6"
validators = "^0.20.0"


[tool.poetry.dev-dependencies]
linkml = "^1.3.3"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"

#[tool.poetry.group.dev.dependencies]
#linkml = "^1.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]

[tool.poetry.scripts]
add_col = "src.synbio_schema.scripts.add_col:cli"
lbnl_felix_tracking2linkml = "src.synbio_schema.scripts.lbnl_felix_tracking2linkml:cli"
get_fluor_prot_seqs = "src.synbio_schema.scripts.get_fluor_prot_seqs:cli"
get_uniprot_entries = "src.synbio_schema.scripts.get_uniprot_entries:cli"
interval_clustering = "src.synbio_schema.scripts.interval_clustering:cli"
seq2ids = "src.synbio_schema.scripts.seq2ids:seq2ids"

